Related to #24: Updated token endpoint to be b64 encoded.
